# PW-ProductivitySite

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml
ProductivitySite/: .dockerignore  Dockerfile  db.sqlite3  manage.py  pyproject.toml
ProductivitySite/ProductivitySite/: asgi.py  settings.py  urls.py  wsgi.py
ProductivitySite/features/: environment.py
ProductivitySite/features/auth/: auth_login.feature  auth_logout.feature  auth_recover_password.feature  auth_register.feature  login_validation.feature  register_user.feature
ProductivitySite/features/authorization/: authorization.feature
ProductivitySite/features/pages/: calendar.feature  dashboard.feature  landing.feature  productivity.feature  profile.feature
ProductivitySite/features/shell/: navigation_sidebar.feature  theme_toggle.feature
ProductivitySite/features/steps/: auth_steps.py  authentication.py  authorization.py  common.py  create_subject.py  create_subtask.py  create_task.py  delete_subject.py  delete_subtask.py  delete_task.py  edit_subject.py  edit_subtask.py  edit_task.py  login_validation.py  register_user.py  shell_steps.py  subject_steps.py  subtask_steps.py  task_steps.py  view_subject.py  view_subtask.py  view_task.py
ProductivitySite/features/subjects/: create_subject.feature  delete_subject.feature  edit_subject.feature  subject_create.feature  subject_delete.feature  subject_read.feature  subject_update.feature  view_subject.feature
ProductivitySite/productivity_site/: admin.py  apps.py  forms.py  urls.py  views.py
ProductivitySite/templates/: base.html
(+91 files in other folders)
