[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "productivitysite"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14,<3.15"
dependencies = [
    "django>=6.0.2",
]

[tool.setuptools.packages.find]
include = ["ProductivitySite", "ProductivitySite.*", "productivity_site", "productivity_site.*"]
